# socket_server

./: .gitignore  CMakeLists.txt  README.md  lin_socket.cpp
src/: CMakeLists.txt  main.cpp  socket_exceptions.h
src/logger/: logger.cpp  logger.h  logger.hpp
src/socket/: linsocket.hpp  socket.cpp  socket.h  socket.hpp  socket_definitions.h  socket_definitions.hpp  socket_exceptions.hpp  socket_settings.hpp  socket_win.hpp
src/socket/linux/: linux_socket.hpp  linux_socket_exceptions.cpp  linux_socket_exceptions.h  linux_socket_exceptions.hpp
src/socket/windows/: win_socket.hpp  win_socket_exceptions.cpp  win_socket_exceptions.h  win_socket_exceptions.hpp
src/windows/: win_socket_exceptions.cpp
